# far-to-go

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Far to Go.sln  FarToGo.vcxproj  FarToGo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clean.ps1  cmake_install.cmake  dx-shader-compiler-build_release.ps1  dx-shader-compiler-generate_build_system.ps1  generate_build_system.ps1  generate_visual_studio_sln.ps1  install_debug.ps1  list_variables.ps1  test_debug.ps1
CoreApplication/: CMakeLists.txt  CoreApplicationFunctions.cmake  blConfig.cpp  blConfig.h  blGameLoop.cpp  blGameLoop.h  blWindow.cpp  blWindow.h
CoreApplicationTests/: CMakeLists.txt  ResourceTests.cpp  main.cpp
DX12/: CMakeLists.txt  CTestTestfile.cmake  DX12.vcxproj  DX12.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  blCommandList.cpp  blCommandList.h  blCommandListAllocator.cpp  blCommandListAllocator.h  blCommandQueue.cpp  blCommandQueue.h  blConstantBuffer.h  blConstantBufferDescriptorHeap.cpp  blConstantBufferDescriptorHeap.h  blDX12.cpp  blDX12.h  blDX12Buffer.cpp  blDX12Buffer.h  blDX12Core.cpp  blDX12Core.h  blDX12Imgui.cpp  blDX12Imgui.h  blDX12Math.inl  blDX12MeshGeometry.h  blDX12ReadFile.cpp  blDX12ReadFile.h  blDX12Shader.cpp  blDX12Shader.h  blDX12Test.cpp  blDX12Test.h  blDX12UploadBuffer.cpp  blDX12UploadBuffer.h  blDX12_LegacyV1.cpp  blDX12_LegacyV1.h  blDepthBuffer.cpp  blDepthBuffer.h  blDescriptorHeap.h  (+26 more)
DX12Demo/: AbstractExample.cpp  AbstractExample.h  BoxExample.cpp  BoxExample.h  CMakeLists.txt  CTestTestfile.cmake  DX12Demo.vcxproj  DX12Demo.vcxproj.filters  Examples.cpp  Examples.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  ImguiExample.cpp  ImguiExample.h  IndexBufferExample.cpp  IndexBufferExample.h  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ShapesExample.cpp  ShapesExample.h  VertexBufferLineStripExample.cpp  VertexBufferLineStripExample.h  cmake_install.cmake  main.cpp
DX12Tests/: CMakeLists.txt  CTestTestfile.cmake  DX12Tests.cpp  DX12Tests.vcxproj  DX12Tests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Mesh.cpp  MockID3D12Device.h  MockID3D12GraphicsCommandList.h  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  WorldViewProjection.cpp  cmake_install.cmake  main.cpp
Graphics/: CMakeLists.txt  CTestTestfile.cmake  Graphics.vcxproj  Graphics.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  blBuffer.cpp  blBuffer.h  blBufferTypes.cpp  blBufferTypes.h  blColour.h  blCompositeMesh.cpp  blCompositeMesh.h  blGraphicsAPI.cpp  blGraphicsAPI.h  blGraphicsAPIImpl.cpp  blGraphicsAPIImpl.h  blGraphicsAPI_LegacyV1.cpp  blGraphicsAPI_LegacyV1.h  blGraphicsCore.h  blHeadless.cpp  blHeadless.h  blImageFormat.h  blMaterial.cpp  blMaterial.h  blMesh.cpp  blMesh.h  blMeshIndexedCatalogue.cpp  blMeshIndexedCatalogue.h  blMeshLibrary.cpp  blMeshLibrary.h  blRenderData.h  blRenderDataTypes.h  blRenderGroup.cpp  blRenderGroup.h  blRenderItem.cpp  blRenderItem.h  blRenderScene.cpp  (+11 more)
GraphicsDemoDX12/: CMakeLists.txt  CTestTestfile.cmake  CylinderDemoScene.cpp  CylinderDemoScene.h  DemoImgui.cpp  DemoImgui.h  DemoScene.cpp  DemoScene.h  DemoScene01.cpp  DemoScene01.h  DemoScene02.cpp  DemoScene02.h  GeosphereDemoScene.cpp  GeosphereDemoScene.h  GraphicsDemoDX12.vcxproj  GraphicsDemoDX12.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MeshDemoSceneBase.h  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ShapesWithPassDemoScene.cpp  ShapesWithPassDemoScene.h  blBoxDemoScene.cpp  blBoxDemoScene.h  blDemoImguiDropdown.cpp  blDemoImguiDropdown.h  blMaterialAndLightingDemoScene.cpp  blMaterialAndLightingDemoScene.h  blShapesDemoScene.cpp  blShapesDemoScene.h  blTerrainDemo.cpp  blTerrainDemo.h  cmake_install.cmake  main.cpp
GraphicsTests/: Buffer.cpp  CMakeLists.txt  CTestTestfile.cmake  CompositeMesh.cpp  GraphicsTests.cpp  GraphicsTests.vcxproj  GraphicsTests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Mesh.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RenderGroups.cpp  Shader.cpp  VirtualCamera.cpp  cmake_install.cmake  main.cpp
Math/: BLMath.h  BLMath.inl  BLMathFloat.h  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Math.vcxproj  Math.vcxproj.filters  Quad.inl  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Ray.inl  Rect.inl  Vector2.inl  Vector3.cpp  Vector3.h  Vector3.inl  blMath.inl  blMath3D.inl  blMathUtils.cpp  blMatrix2x2.inl  blMatrix2x3.inl  blMatrix3x2.inl  blMatrix3x3.inl  blMatrix4x4.inl  blPoint3.inl  blQuad.inl  blQuaternion.inl  blRay.inl  blRect.inl  blRotation.inl  blTransform.cpp  blTransform.h  blTransform.inl  blVector2.inl  blVector3.cpp  blVector3.inl  blVector4.inl  cmake_install.cmake
MathTests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Math.cpp  MathTests.cpp  MathTests.vcxproj  MathTests.vcxproj.filters  Matrix2x2.cpp  Matrix2x3.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Point3.cpp  Quaternion.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Rect.cpp  Rotation.cpp  Transformations.cpp  Vector2.cpp  Vector3.cpp  Vector3Tests.cpp  cmake_install.cmake  main.cpp
Metrics/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Metrics.vcxproj  Metrics.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  blPIX.cpp  blPIX.h  blTime.cpp  blTime.h  cmake_install.cmake
RapidXML/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RapidXML.vcxproj  RapidXML.vcxproj.filters  cmake_install.cmake
Rendering/: CMakeLists.txt  Rendering.vcxproj  rendering.cpp
RenderingTests/: CMakeLists.txt  RenderingTests.cpp  RenderingTests.vcxproj  RenderingTests.vcxproj.filters  main.cpp
imgui/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  (+5 more)
(+149 files in other folders)
